# ws_rag_codex

./: .gitignore  AGENTS.md  Makefile  PROJECT_DETAILS.md  README.md  plano_replicacao_codex.md  pyproject.toml
docs/: API.md  ARCHITECTURE.md  DATA_MODEL.md  DEPLOYMENT.md  DEVELOPMENT.md  OBSERVABILITY.md  PROVIDERS.md  README.md  TEST_PLAN.md  THREAT_MODEL.md
docs/adr/: 0001-modular-monolith.md  0002-postgres-document-versioning.md  0003-dense-retrieval-first.md  0004-public-operator-profiles.md  0005-single-vm-gcp.md  README.md
specs/001-production-agentic-rag/: plan.md  spec.md  tasks.md
src/rag_production/: __init__.py
tests/: test_package.py
